파일업로드/다운로드 수정 1. 경로 변경(외부경로로 업로드/다운로드 경로 설정 및 외부파일을 주소로 접근할 수 있도록 설정 - WebConfig) 2. 첨부파일 다운로드 수정 3. 첨부파일 업로드 수정 4. 웹에디터 이미지 업로드 수정

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.dhkim.sworks</groupId>
 	<artifactId>sworks</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>smart-wokrs</name>
 	<description>smart-works project for Spring Boot</description>
 
