--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,11 @@ mybatis.config-location=classpath:mybatis-config.xml
 # 파일 업로드 사이즈
 #file.upload.size=10000000000
 
-config.file.upload.path=/data/dev-web/smartPortal/upload/
-config.img.upload.url=/resource_file/photo_upload/
+#config.file.upload.path=/data/dev-web/smartPortal/upload/
+#config.img.upload.url=/resource_file/photo_upload/
+config.file.base.path=D:/smart-works/files/
+config.file.upload.path=/upload/
+config.file.editor.path=/resource_file/photo_upload/
 
 config.board.page.count=25
 
